--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
     "fetch": "^1.1.0",
+    "mdb-react-ui-kit": "^4.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.3",
     "sass": "^1.54.0",
     "web-vitals": "^2.1.4"
   },
