--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "fetch": "^1.1.0",
+    "gh-pages": "^4.0.0",
     "mdb-react-ui-kit": "^4.1.0",
     "netlify-cli": "^10.15.0",
     "prop-types": "^15.8.1",
